2015-02-02  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.8 ===

2015-02-02  Xavi Artigas  <xartigas@fluendo.com>

	reviewed by: Jorge Zapata  <jzapata@fluendo.com>

	* examples/multidl.c: (done_cb), (main):
	* lib/fludownloader.c: (_report_task_done), (_write_function),
	(fludownloader_get_polling_period),
	(fludownloader_get_outcome_string):
	* lib/fludownloader.h:
	Ignore errno as CURL does not seem to set it. Use only CURL error codes
	to return more specific error messages from the done callback.

2015-02-02  Jorge Zapata  <jzapata@fluendo.com>

	* examples/multidl.c: (done_cb):
	* lib/fludownloader.c: (_report_task_done), (_write_function),
	(_process_curl_messages):
	* lib/fludownloader.h:
	Check the CURLcode on the message to know if the task failed or not
	Pass the errno value in case it is set

2014-11-19  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.7 ===

2014-11-18  Jorge Zapata  <jzapata@fluendo.com>

	* ext/Makefile.am:
	Fix the distcheck rule

2014-09-15  Jorge Zapata  <jzapata@fluendo.com>

	* fludownloader_static.pc.in:
	Dont fill the static variants but the dynamic variants with the static dependencies

2014-09-15  Jorge Zapata  <jzapata@fluendo.com>

	* examples/Makefile.am:
	The pipelining test should not be part of the fludownloader
	examples. It does not use the fludownloader API at all

2014-09-15  Jorge Zapata <jzapata@fluendo.com>

	* Makefile.am:
	* configure.ac:
	* examples/Makefile.am:
	* ext:
	* ext/Makefile.am:
	* fludownloader.pc.in:
	* fludownloader_static.pc.in:
	* lib/Makefile.am:
	Make the project be recursive. This is needed to first build the local
	curl in case the lib needs it.
	Make sure to call the internal curl configuration before the config.stat
	is created, that gives us a margin to update the different vars.
	Update the pc files to list the internal libcurl dependencies when
	linked statically.